add labels for username and password

--- a/forms.html
+++ b/forms.html
@@ -10,8 +10,10 @@
 <!-- method - what HTTP method (get/post) -->
 
 	<form action="http://www.wikipedia.org">
-		<input type="text" name="username" placeholder="username">
-		<input type="text" name="password" placeholder="password">
+		<label for="username">Username:</label>
+		<input type="text" name="username" placeholder="username" id="username">
+		<label for="password">Password:</label>
+		<input type="text" name="password" placeholder="password" id="password">
 		<input type="submit">
 	</form>
 </body>
