--- a/forms.html
+++ b/forms.html
@@ -10,10 +10,10 @@
 <!-- method - what HTTP method (get/post) -->
 
 	<form action="http://www.wikipedia.org">
-		<label for="username">Username:</label>
-		<input type="text" name="username" placeholder="username" id="username">
+		<label for="username">Email:</label>
+		<input type="Email" name="username" placeholder="Email" id="username" required>
 		<label for="password">Password:</label>
-		<input type="text" name="password" placeholder="password" id="password">
+		<input type="text" name="password" placeholder="password" id="password" required>
 		<input type="submit">
 	</form>
 </body>
